# MindNet

./: .env.example  .gitignore  AGENT.md  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  SECURITY.md
mock_data/: show__cdp__neighbors.txt  show__interfaces__status.txt  show__ip__interface__brief.txt  show__ip__route.txt  show__version.txt
netmind/: main.py  shell.py
netmind/commands/: audit.py  connect.py  health.py  run.py
src/netmind/: __init__.py  audit.py  cli.py  explain.py  formatters.py  mock_device.py  models.py  rules.py  shell.py  snapshot_store.py  ssh_client.py  version.py
src/netmind/connectors/: __init__.py  api.py  base.py  manager.py  ssh.py
src/netmind/security/: __init__.py  config_store.py  credentials.py
tests/: test_cli_product.py  test_connector_cli.py  test_connectors.py  test_explain.py  test_mock_device.py  test_models_snapshot.py  test_rules.py  test_security.py  test_shell.py  test_snapshot_store.py
