[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mindnet"
version = "0.1.0"
description = "AI Infrastructure Brain."
authors = [
    { name = "MindNet contributors" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["network", "cli", "automation", "cisco", "ssh", "netmiko"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
urls = { Homepage = "https://github.com/x2vmbwtsjf-afk/MindNet", Repository = "https://github.com/x2vmbwtsjf-afk/MindNet", Issues = "https://github.com/x2vmbwtsjf-afk/MindNet/issues" }
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "netmiko>=4.3",
    "prompt_toolkit>=3.0",
    "python-dotenv>=1.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[project.scripts]
mindnet = "netmind.cli:main"
netmind = "netmind.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
